--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
           </configuration>
       </plugin>
     </plugins>
+   
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>2.7</version>
+            </plugin>           
+          </plugins>
+        </pluginManagement>   
+   
   </build>
   
 </project>
